--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -1,5 +1,15 @@
 .feynman__link {
+  color: #2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 0 auto;
+  text-decoration: none;
   position: absolute;
   top: 50%;
   right: 48px;
+}
+
+.feynman__link:hover {
+  color: #ff0000;
 }
