--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,4 +1,8 @@
 .header__subtitle {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0 auto;
   width: 388px;
   position: absolute;
   left: 64px;
