--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,4 +1,7 @@
 .header__title {
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
   display: flex;
   width: 730px;
   flex-direction: column;
