--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,5 +1,9 @@
 .section-subtitle {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  z-index: 2;
   width: 60%;
   margin: 20px auto 0px auto;
-  display: flex;
+  text-align: center;
 }
