--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,5 +1,9 @@
 .section-title {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  z-index: 2;
   width: 60%;
   margin: 0 auto;
-  display: flex;
+  text-align: center;
 }
