--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -1,4 +1,9 @@
 .two-columns__brief {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  margin-top: 0px;
   width: 175px;
   flex-direction: row;
   align-self: stretch;
