--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -4,6 +4,7 @@
   font-weight: normal;
   color: #2f80ed;
   margin-top: 0px;
+  margin-bottom: 0;
   width: 175px;
   flex-direction: row;
   align-self: stretch;
