--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -1,6 +1,8 @@
 .cards__description {
-  width: 240px;
   margin: auto;
   margin-top: 16px;
   text-align: center;
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
 }
