--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,6 +1,7 @@
 .cards__image {
   width: 160px;
   height: 160px;
-  margin: 60px 40px 43px 40px;
+  margin-top: 60px;
+  margin-bottom: 43px;
   border-radius: 100%;
 }
