--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,5 +1,7 @@
 .cards__title {
-  width: 240px;
   margin: auto;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
   text-align: center;
 }
