--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,5 +6,7 @@
   display: flex;
   position: relative;
   overflow: hidden;
-  /* выше установили ограничения для секции */
+  flex-direction: column;
+  justify-content: center;
+/* выше установили ограничения для секции */
 }
