--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,9 @@
 .resources__logo-zone {
-  width: 1100px;
-  margin: 80px auto 0 auto;
   display: flex;
+  width: 1100px;
+  list-style-type: none;
+  padding: 0;
+  margin: 80px auto 217px auto;
+  justify-content: space-around;
+  align-items: flex-end;
 }
