--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,7 +1,7 @@
 .section-title {
   line-height: 1.15;
   font-size: 60px;
-  font-weight: bold;
+  font-weight: 600;
   z-index: 2;
   width: 60%;
   margin: 0 auto;
