--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,7 +1,8 @@
 .table {
   width: 1100px;
   display: flex;
-  margin: 0px auto 0px auto;
+  margin: 0 auto;
+  padding: 0;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
