--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -2,5 +2,9 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 0px auto;
+  margin: 0px auto 30px auto;
+}
+
+.two-columns__paragraph:nth-child(3) {
+  margin: 0;
 }
