--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,6 +1,7 @@
 .cards {
   width: 920px;
   margin: 0px auto 0px auto;
+  padding: 0;
   display: flex;
   flex-direction: row;
   align-items: stretch;
