--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -1,5 +1,5 @@
 .footer__column-links {
-  margin: 20px auto 16px auto;
+  margin: 20px 0 16px;
   padding: 0;
   color: white;
   list-style-type: none;
