--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,4 +1,9 @@
 .resources__link {
-  width: 270px;
-  height: 38px;
+  margin: auto;
+  padding: auto;
+}
+
+
+.resources__link:hover {
+  color: #ff0000;
 }
