--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,9 +1,13 @@
 .resources__logo-zone {
-  display: flex;
   width: 1100px;
   list-style-type: none;
   padding: 0;
   margin: 80px auto 217px auto;
+  display: flex;
   justify-content: space-around;
   align-items: flex-end;
+}
+
+.resources__logo-zone .resources__link{
+  display:inline-block
 }
