--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,4 +1,8 @@
 .resources__logo {
-  padding: 0;
-  margin: 0;
+  width: 270px;
+  height: 38px;
+}
+
+.resources__logo:hover {
+  color: #ff0000;
 }
