--- a/blocks/footer/__column/_content/footer__column_content_copyright.css
+++ b/blocks/footer/__column/_content/footer__column_content_copyright.css
@@ -1,3 +1,9 @@
 .footer__column_content_copyright {
   flex-basis: 711px;
+  flex-direction: column;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
+
+
