--- a/blocks/footer/__column/_content/footer__column_content_info.css
+++ b/blocks/footer/__column/_content/footer__column_content_info.css
@@ -1,3 +1,6 @@
 .footer__column_content_info {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
