--- a/blocks/footer/__column/footer__column.css
+++ b/blocks/footer/__column/footer__column.css
@@ -1,10 +1,6 @@
 .footer__column {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  margin: 0;
+  padding: 0;
 }
 
-.footer__column:first-child {
-  justify-content: space-between;
-}
+
