--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -3,7 +3,7 @@
   padding: auto;
 }
 
-
 .resources__link:hover {
-  color: #ff0000;
+  outline: 1px solid #1f1f1f;
+  box-shadow: 20px -10px 10px #f2f2f2;
 }
