--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -4,10 +4,13 @@
   padding: 0;
   margin: 80px auto 217px auto;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: flex-end;
 }
 
 .resources__logo-zone .resources__link{
-  display:inline-block
+  display:inline-block;
 }
+
+
